src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__arithmetic_add_float.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 4
  .locals
    result = r1
    a = r2
    b = r3
  .code
  0  lsmi r1, 0
  1  lnum r2, 1.0
  2  lnum r3, 1.0
  3  add r1, r2, r3
  4  add r1, 1.0, r3
  5  add r1, r2, 1.0
  6  lnil r0
  7  ret
