src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__arithmetic_emit_separate_load.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 3
  .locals
    a = r1
  .code
    0  lint r1, l0   ; l0=40000
    1  add r1, r1, 40001
    2  add r1, r1, 40002
    3  add r1, r1, 40003
    4  add r1, r1, 40004
    5  add r1, r1, 40005
    6  add r1, r1, 40006
    7  add r1, r1, 40007
    8  add r1, r1, 40008
    9  add r1, r1, 40009
   10  add r1, r1, 40010
   11  add r1, r1, 40011
   12  add r1, r1, 40012
   13  add r1, r1, 40013
   14  add r1, r1, 40014
   15  add r1, r1, 40015
   16  add r1, r1, 40016
   17  add r1, r1, 40017
   18  add r1, r1, 40018
   19  add r1, r1, 40019
   20  add r1, r1, 40020
   21  add r1, r1, 40021
   22  add r1, r1, 40022
   23  add r1, r1, 40023
   24  add r1, r1, 40024
   25  add r1, r1, 40025
   26  add r1, r1, 40026
   27  add r1, r1, 40027
   28  add r1, r1, 40028
   29  add r1, r1, 40029
   30  add r1, r1, 40030
   31  add r1, r1, 40031
   32  add r1, r1, 40032
   33  add r1, r1, 40033
   34  add r1, r1, 40034
   35  add r1, r1, 40035
   36  add r1, r1, 40036
   37  add r1, r1, 40037
   38  add r1, r1, 40038
   39  add r1, r1, 40039
   40  add r1, r1, 40040
   41  add r1, r1, 40041
   42  add r1, r1, 40042
   43  add r1, r1, 40043
   44  add r1, r1, 40044
   45  add r1, r1, 40045
   46  add r1, r1, 40046
   47  add r1, r1, 40047
   48  add r1, r1, 40048
   49  add r1, r1, 40049
   50  add r1, r1, 40050
   51  add r1, r1, 40051
   52  add r1, r1, 40052
   53  add r1, r1, 40053
   54  add r1, r1, 40054
   55  add r1, r1, 40055
   56  add r1, r1, 40056
   57  add r1, r1, 40057
   58  add r1, r1, 40058
   59  add r1, r1, 40059
   60  add r1, r1, 40060
   61  add r1, r1, 40061
   62  add r1, r1, 40062
   63  add r1, r1, 40063
   64  add r1, r1, 40064
   65  add r1, r1, 40065
   66  add r1, r1, 40066
   67  add r1, r1, 40067
   68  add r1, r1, 40068
   69  add r1, r1, 40069
   70  add r1, r1, 40070
   71  add r1, r1, 40071
   72  add r1, r1, 40072
   73  add r1, r1, 40073
   74  add r1, r1, 40074
   75  add r1, r1, 40075
   76  add r1, r1, 40076
   77  add r1, r1, 40077
   78  add r1, r1, 40078
   79  add r1, r1, 40079
   80  add r1, r1, 40080
   81  add r1, r1, 40081
   82  add r1, r1, 40082
   83  add r1, r1, 40083
   84  add r1, r1, 40084
   85  add r1, r1, 40085
   86  add r1, r1, 40086
   87  add r1, r1, 40087
   88  add r1, r1, 40088
   89  add r1, r1, 40089
   90  add r1, r1, 40090
   91  add r1, r1, 40091
   92  add r1, r1, 40092
   93  add r1, r1, 40093
   94  add r1, r1, 40094
   95  add r1, r1, 40095
   96  add r1, r1, 40096
   97  add r1, r1, 40097
   98  add r1, r1, 40098
   99  add r1, r1, 40099
  100  add r1, r1, 40100
  101  add r1, r1, 40101
  102  add r1, r1, 40102
  103  add r1, r1, 40103
  104  add r1, r1, 40104
  105  add r1, r1, 40105
  106  add r1, r1, 40106
  107  add r1, r1, 40107
  108  add r1, r1, 40108
  109  add r1, r1, 40109
  110  add r1, r1, 40110
  111  add r1, r1, 40111
  112  add r1, r1, 40112
  113  add r1, r1, 40113
  114  add r1, r1, 40114
  115  add r1, r1, 40115
  116  add r1, r1, 40116
  117  add r1, r1, 40117
  118  add r1, r1, 40118
  119  add r1, r1, 40119
  120  add r1, r1, 40120
  121  add r1, r1, 40121
  122  add r1, r1, 40122
  123  add r1, r1, 40123
  124  add r1, r1, 40124
  125  add r1, r1, 40125
  126  add r1, r1, 40126
  127  add r1, r1, 40127
  128  add r1, r1, 40128
  129  add r1, r1, 40129
  130  add r1, r1, 40130
  131  add r1, r1, 40131
  132  add r1, r1, 40132
  133  add r1, r1, 40133
  134  add r1, r1, 40134
  135  add r1, r1, 40135
  136  add r1, r1, 40136
  137  add r1, r1, 40137
  138  add r1, r1, 40138
  139  add r1, r1, 40139
  140  add r1, r1, 40140
  141  add r1, r1, 40141
  142  add r1, r1, 40142
  143  add r1, r1, 40143
  144  add r1, r1, 40144
  145  add r1, r1, 40145
  146  add r1, r1, 40146
  147  add r1, r1, 40147
  148  add r1, r1, 40148
  149  add r1, r1, 40149
  150  add r1, r1, 40150
  151  add r1, r1, 40151
  152  add r1, r1, 40152
  153  add r1, r1, 40153
  154  add r1, r1, 40154
  155  add r1, r1, 40155
  156  add r1, r1, 40156
  157  add r1, r1, 40157
  158  add r1, r1, 40158
  159  add r1, r1, 40159
  160  add r1, r1, 40160
  161  add r1, r1, 40161
  162  add r1, r1, 40162
  163  add r1, r1, 40163
  164  add r1, r1, 40164
  165  add r1, r1, 40165
  166  add r1, r1, 40166
  167  add r1, r1, 40167
  168  add r1, r1, 40168
  169  add r1, r1, 40169
  170  add r1, r1, 40170
  171  add r1, r1, 40171
  172  add r1, r1, 40172
  173  add r1, r1, 40173
  174  add r1, r1, 40174
  175  add r1, r1, 40175
  176  add r1, r1, 40176
  177  add r1, r1, 40177
  178  add r1, r1, 40178
  179  add r1, r1, 40179
  180  add r1, r1, 40180
  181  add r1, r1, 40181
  182  add r1, r1, 40182
  183  add r1, r1, 40183
  184  add r1, r1, 40184
  185  add r1, r1, 40185
  186  add r1, r1, 40186
  187  add r1, r1, 40187
  188  add r1, r1, 40188
  189  add r1, r1, 40189
  190  add r1, r1, 40190
  191  add r1, r1, 40191
  192  add r1, r1, 40192
  193  add r1, r1, 40193
  194  add r1, r1, 40194
  195  add r1, r1, 40195
  196  add r1, r1, 40196
  197  add r1, r1, 40197
  198  add r1, r1, 40198
  199  add r1, r1, 40199
  200  add r1, r1, 40200
  201  add r1, r1, 40201
  202  add r1, r1, 40202
  203  add r1, r1, 40203
  204  add r1, r1, 40204
  205  add r1, r1, 40205
  206  add r1, r1, 40206
  207  add r1, r1, 40207
  208  add r1, r1, 40208
  209  add r1, r1, 40209
  210  add r1, r1, 40210
  211  add r1, r1, 40211
  212  add r1, r1, 40212
  213  add r1, r1, 40213
  214  add r1, r1, 40214
  215  add r1, r1, 40215
  216  add r1, r1, 40216
  217  add r1, r1, 40217
  218  add r1, r1, 40218
  219  add r1, r1, 40219
  220  add r1, r1, 40220
  221  add r1, r1, 40221
  222  add r1, r1, 40222
  223  add r1, r1, 40223
  224  add r1, r1, 40224
  225  add r1, r1, 40225
  226  add r1, r1, 40226
  227  add r1, r1, 40227
  228  add r1, r1, 40228
  229  add r1, r1, 40229
  230  add r1, r1, 40230
  231  add r1, r1, 40231
  232  add r1, r1, 40232
  233  add r1, r1, 40233
  234  add r1, r1, 40234
  235  add r1, r1, 40235
  236  add r1, r1, 40236
  237  add r1, r1, 40237
  238  add r1, r1, 40238
  239  add r1, r1, 40239
  240  add r1, r1, 40240
  241  add r1, r1, 40241
  242  add r1, r1, 40242
  243  add r1, r1, 40243
  244  add r1, r1, 40244
  245  add r1, r1, 40245
  246  add r1, r1, 40246
  247  add r1, r1, 40247
  248  add r1, r1, 40248
  249  add r1, r1, 40249
  250  add r1, r1, 40250
  251  add r1, r1, 40251
  252  add r1, r1, 40252
  253  add r1, r1, 40253
  254  add r1, r1, 40254
  255  add r1, r1, 40255
  256  lint r2, l256   ; l256=40256
  257  add r1, r1, r2
  258  lnil r0
  259  ret
