src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__arithmetic_mul.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
let result = 0
let a = 1
let b = 1

result = a * b
result = 1 * b
result = a * 1
}

OK
.fn @main
  params 0
  stack 4
  .locals
    result = r1
    a = r2
    b = r3
  .code
  0  lsmi r1, 0
  1  lsmi r2, 1
  2  lsmi r3, 1
  3  mul r1, r2, r3
  4  mul r1, 1, r3
  5  mul r1, r2, 1
  6  lnil r0
  7  ret
