src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__array_empty.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 2
  .code
  0  larr r0, 0
  1  ret
