src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__block_full.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
    let v = 0
    0
}


OK
.fn @main
  params 0
  stack 2
  .locals
    v = r1
  .code
  0  lsmi r1, 0
  1  lsmi r0, 0
  2  ret
