src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__block_with_tail.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do { 1 }


OK
.fn @main
  params 0
  stack 1
  .code
  0  lsmi r0, 1
  1  ret
